# idns.eth-api

./: Cargo.toml  Makefile  README.md  dev.sh
api/: Cargo.toml  build.rs
api/proto/: account.proto  identity.proto  networks.proto  service.proto  storage.proto  system.proto  wasmer.proto  worker.proto
api/src/: command.rs  error.rs  lib.rs
bins/idns-cli/: Cargo.toml
bins/idns-cli/src/: lib.rs
bins/idns-cli/src/config/: config.rs
bins/idns-cli/src/server/: server.rs
bins/idns-cli/src/utils/: mod.rs
core/: Cargo.toml
crates/idns-core/: Cargo.toml
crates/idns-core/examples/: account.rs  decrypt.rs
crates/idns-core/src/: lib.rs
crates/idns-core/src/account/: account.rs  auth.rs  mod.rs
crates/idns-core/src/identity/: application.rs  attribute.rs  attribute_value.rs  identity.rs  meta_credential.rs  mod.rs  verifiable_credential.rs
crates/idns-core/src/ipfs/: donwload_ipfs.rs  mod.rs
crates/idns-core/src/kvstore/: kvstore.rs  mod.rs
crates/idns-core/src/server/: server.rs
crates/idns-core/src/utils/: base_encoding.rs  files.rs  idns_utils.rs  mod.rs
crates/idns-device-client/: Cargo.toml
crates/idns-devices/: Cargo.toml  build.rs
crates/idns-devices/examples/: cli.rs  client.rs  main.rs  tt.rs
crates/idns-devices/src/: lib.rs  main.rs  ui.rs
crates/idns-devices/src/lang/: cn.rs  cs.rs  da.rs  de.rs  en.rs  eo.rs  es.rs  fr.rs  hu.rs  id.rs  it.rs  ja.rs  ko.rs  pl.rs  pt_PT  ptbr.rs  ru.rs  sk.rs  template.rs  tr.rs  tw.rs  vn.rs
crates/idns-devices/src/platform/: macos.rs
crates/idns-devices/src/platform/privileges_scripts/: com.carriez.RustDesk_server.plist  com.carriez.RustDesk_service.plist  install.scpt  uninstall.scpt
crates/idns-devices/src/server/: mod.rs  uinput.rs
crates/idns-devices/src/ui/: remote.rs
crates/idns-files/: Cargo.toml
crates/idns-ipfs-client/: Cargo.toml
crates/idns-ipfs-client/src/: lib.rs
crates/idns-networks/: Cargo.toml
crates/idns-networks/examples/: client-conf.json  getip.rs  main.rs  nettest.rs  server-conf.json
crates/idns-networks/src/: lib.rs
crates/idns-networks/src/device/: device.rs
crates/idns-networks/src/handlers/: mod.rs  tcp_handler.rs  udp_handler.rs
crates/idns-networks/src/node/: mod.rs  node_db.rs
crates/idns-networks/src/server/: mod.rs
crates/idns-networks/src/tun/: windows.rs
crates/idns-networks/src/tunnel/: mod.rs  tunnel.rs
crates/idns-networks/src/utils/: mod.rs
crates/idns-networks/src/vpnc/: mod.rs
crates/idns-networks/src/vpnc/client/: api.rs  mod.rs
crates/idns-networks/src/vpnc/common/: mod.rs  net.rs
crates/idns-networks/src/vpnc/tun/: linux.rs  macos.rs  mod.rs  windows.rs
crates/idns-node/: Cargo.toml  build.rs
crates/idns-node/examples/: client.rs  download.rs  download_file.rs  identity.rs  node.rs  server.rs
crates/idns-node/proto/: rpc.proto
crates/idns-node/src/: lib.rs
crates/idns-node/src/http/: mod.rs  server.rs
crates/idns-node/src/node/: node.rs
crates/idns-node/src/rpc/: client.rs  mod.rs  server.rs
crates/idns-node/src/services/: mod.rs
crates/idns-node/src/services/account/: account.rs  auth.rs
crates/idns-node/src/services/database/: database.rs
crates/idns-node/src/services/device/: device_node.rs  device_service.rs  mod.rs
crates/idns-node/src/services/identity/: application_service.rs  attribute_service.rs  attribute_value_service.rs  identity_service.rs  meta_credential_service.rs  mod.rs  verifiable_credential_service.rs
crates/idns-node/src/services/registe_center/: mod.rs
crates/idns-node/src/services/storage/: storage.rs
crates/idns-node/src/services/wasmer/: mod.rs  task_service.rs
crates/idns-node/src/utils/: mod.rs  zip.rs
crates/idns-rpc-api/: Cargo.toml  build.rs
crates/idns-rpc-api/proto/: rpc.proto
crates/idns-rpc-api/src/: lib.rs
crates/idns-sqlite/: Cargo.toml  README.md  build.rs  data.db
crates/idns-sqlite/examples/: download.rs  idns.rs
crates/idns-sqlite/proto/: types.proto
crates/idns-sqlite/src/: lib.rs
crates/idns-sqlite/src/connection/: connection.rs
crates/idns-sqlite/src/query/: query.rs
crates/idns-sqlite/src/sync/: -- SQLite.sql  database.rs  mod.rs  schema.rs  table.rs  worker.rs
crates/idns-sqlite/src/update/: update.rs
crates/idns-sqlite/src/utils/: ipfs_client_utils.rs  mod.rs  rusqlite_utils.rs
crates/idns-wasmer/: Cargo.toml
crates/idns-wasmer/examples/: cron.rs  run.rs
crates/idns-wasmer/src/: lib.rs
crates/idns-wasmer/src/executor/: mod.rs  wasm_executor.rs
crates/idns-wasmer/src/scheduler/: scheduler.rs
crates/idns-wasmer/src/task/: task_service.rs
crates/simple-external-impl/: Cargo.toml
crates/simple-external-impl/examples/: ht.rs  identity.rs
crates/simple-external-impl/src/: constants.rs  lib.rs
crates/simple-external-impl/src/identity/: application.rs  attribute.rs  attribute_value.rs  identity.rs  meta_credential.rs  mod.rs  verifiable_credential.rs
crates/simple-external-impl/src/utils/: mod.rs
examples/apptest/: index.html  test.js
node/: Cargo.toml
sdk/: Cargo.toml
sdk-ffi/: Cargo.toml
sdk-ffi/include/: idns_eth_sdk.h
sdk-ffi/src/: lib.rs
sdk/examples/: account.rs
sdk/src/: command.rs  lib.rs  server.rs
sdk/src/account/: account.rs  auth.rs
sdk/src/database/: database.rs  mod.rs  schema.rs  schema.sql
sdk/src/device/: device.rs  device_node.rs  device_service.rs
sdk/src/storage/: storage.rs
sdk/src/utils/: mod.rs
sdk/src/wasmer/: task-service.rs
