[package]
name = "node"
version = "0.1.0"
edition = "2021"


[dependencies]


#IDNS.ETH
idns-eth-files = { path = "../crates/idns-files", version = "*" }
idns-eth-ipfs-client = { path = "../crates/idns-ipfs-client", version = "*" }
idns-eth-networks = { path = "../crates/idns-networks", version = "*" }
idns-eth-sqlite = { path = "../crates/idns-sqlite", version = "*" }
