[package]
name = "idns-eth-core"
version = "0.1.0"
edition = "2021"


[dependencies]
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tracing = "0.1.15"
anyhow = "1"
bytes = "1.1.0"
thiserror = "1"
home = "0.5"
rand = "0.8"
#JSON
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0" }
futures = "0.3"

chacha20poly1305 = { version = "0.9.0", features = ["stream"] }
rust-argon2 = "1.0"
hex-literal = "0.3.4"

base64 = { version = "0.13", default-features = false, features = ["std"] }
bs58 = { version = "0.4", default-features = false, features = ["std"] }
multibase = { version = "0.9", default-features = false, features = ["std"] }
chrono = { version = "0.4", default-features = false, features = [
  "clock",
  "std",
] }


#HTTP CLIENT
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http = "0.2"

#phrase sr25519
tiny-bip39 = "1.0"
sp-core = { version = "6.0.0", features = ["std"] }


#IDNS.ETH
idns-eth-api = { path = "../../api", version = "*" }
simple-external-impl = { path = "../simple-external-impl", version = "0.1.0" }

[dev-dependencies]
tokio-test = "*"
