[package]
name = "idns-eth-devices"
version = "0.1.0"
edition = "2021"

[features]
inline = []
hbbs = []
cli = []
with_rc = ["simple_rc"]
appimage = []
use_samplerate = ["samplerate"]
use_rubato = ["rubato"]
use_dasp = ["dasp"]
hwcodec = ["scrap/hwcodec"]
default = ["use_dasp"]

[dependencies]
tokio = { version = "1", features = ["full"] }

whoami = "1.2"
scrap = { version = "*", git = "https://github.com/rrkeji/idns-rust-crates", features = [
    "wayland",
] }
hbb_common = { version = "*", git = "https://github.com/rrkeji/idns-rust-crates" }
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
cfg-if = "1.0"
lazy_static = "1.4"
sha2 = "0.10"
repng = "0.2"
libc = "0.2"
parity-tokio-ipc = { git = "https://github.com/open-trade/parity-tokio-ipc" }
flexi_logger = { version = "0.22", features = [
    "async",
    "use_chrono_for_offset",
] }
runas = "0.2"
magnum-opus = { git = "https://github.com/open-trade/magnum-opus" }
dasp = { version = "0.11", features = [
    "signal",
    "interpolate-linear",
    "interpolate",
], optional = true }
rubato = { version = "0.12", optional = true }
samplerate = { version = "0.2", optional = true }
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }
clap = "3.0"
rpassword = "7.0"
base64 = "0.13"
sysinfo = "0.24"
num_cpus = "1.13"
bytes = { version = "1.2", features = ["serde"] }
default-net = "0.11.0"
wol-rs = "0.9.1"

[target.'cfg(not(target_os = "linux"))'.dependencies]
reqwest = { version = "0.11", features = [
    "json",
    "rustls-tls",
], default-features = false }

[target.'cfg(not(any(target_os = "android", target_os = "linux")))'.dependencies]
cpal = "0.13.5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
machine-uid = "0.2"
mac_address = "1.1"
sciter-rs = { git = "https://github.com/open-trade/rust-sciter", branch = "dyn" }
sys-locale = "0.2"
enigo = { version = "*", git = "https://github.com/rrkeji/idns-rust-crates", features = [
    "with_serde",
] }
clipboard = { version = "*", git = "https://github.com/rrkeji/idns-rust-crates" }
rdev = { git = "https://github.com/open-trade/rdev" }
ctrlc = "3.2"
arboard = "2.0"
#minreq = { version = "2.4", features = ["punycode", "https-native"] }
system_shutdown = "3.0.0"

[target.'cfg(target_os = "windows")'.dependencies]
#systray = { git = "https://github.com/open-trade/systray-rs" }
trayicon = { git = "https://github.com/open-trade/trayicon-rs", features = [
    "winit",
] }
winit = "0.26"
winapi = { version = "0.3", features = ["winuser"] }
winreg = "0.10"
windows-service = "0.4"
virtual_display = { version = "*", git = "https://github.com/rrkeji/idns-rust-crates" }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.24"
dispatch = "0.2"
core-foundation = "0.9"
core-graphics = "0.22"
include_dir = "0.7.2"
tray-item = "0.7"       # looks better than trayicon
dark-light = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
psimple = { package = "libpulse-simple-binding", version = "2.25" }
pulse = { package = "libpulse-binding", version = "2.26" }
rust-pulsectl = { git = "https://github.com/open-trade/pulsectl" }
async-process = "1.3"
mouce = { git = "https://github.com/fufesou/mouce.git" }
evdev = { git = "https://github.com/fufesou/evdev" }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.11"
jni = "0.19"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
flutter_rust_bridge = "=1.30.0"


[target.'cfg(target_os="windows")'.build-dependencies]
winres = "0.1"
winapi = { version = "0.3", features = ["winnt"] }

[build-dependencies]
cc = "1.0"
hbb_common = { version = "*", git = "https://github.com/rrkeji/idns-rust-crates" }
simple_rc = { version = "*", git = "https://github.com/rrkeji/idns-rust-crates", optional = true }
flutter_rust_bridge_codegen = "=1.30.0"

[dev-dependencies]
hound = "3.4"


[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
#opt-level = 'z' # only have smaller size after strip
