[package]
name = "idns-eth-networks"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
log4rs = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
rand = "0.8"
socket2 = "0.4"
parking_lot = "0.12"
anyhow = "1"
mimalloc = { version = "*", default-features = false }
crossbeam-channel = "0.5"
ahash = "0.8"
futures-util = "0.3"
aes = "0.8"
ctr = "0.9"
md5 = "0.7"

[target.'cfg(any(target_os = "linux", target_os = "windows", target_os = "macos"))'.dependencies]
sys-info = "0.9"
mac_address = "1.1"
local-ip-address = "0.4"

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
tun = "0.5"


[target.'cfg(target_os = "windows")'.dependencies]
networks-wintun = { git = "https://github.com/jinisu/networks-wintun.git" }

[profile.release]
lto = true
codegen-units = 1
