[package]
name = "idns-eth-sqlite"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tracing = "0.1.15"

rusqlite = "0.28"
delay_timer = "0.11"
anyhow = "1"
lazy_static = "1.4"
futures = "0.3"
tokio = { version = "1", features = ["full"] }

prost = "0.11"
prost-types = "0.11"
bytes = "1.2"
#JSON
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0" }

#IDNS.ETH
idns-eth-core = { path = "../idns-core", version = "*" }
ipfs-api-backend-hyper = { version = "0.5", features = ["with-send-sync"] }

[build-dependencies]
prost-build = "0.11"
