[package]
name = "simple-external-impl"
version = "0.1.0"
edition = "2021"


[dependencies]
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tracing = "0.1.15"
anyhow = "1"
bytes = "1.1.0"
thiserror = "1"
lazy_static = "1.4"

#HTTP CLIENT
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http = "0.2"

#JSON
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

#IDNS.ETH
idns-eth-api = { path = "../../api", version = "*" }
